# contrail

./: CMakeLists.txt  README.md  package.xml
contrail/: CMakeLists.txt  README.md  package.xml  setup.py
contrail/cfg/: ManagerParams.cfg
contrail/launch/: converter_path_spline.launch  converter_waypoints_path.launch  dispatcher.launch  generate.launch  guidance.launch  load_spline.launch  load_waypoints.launch  spline_dispatcher.launch  waypoint_dispatcher.launch
contrail/movements/: circle.yaml  circle_end_home.yaml  square.yaml
contrail/scripts/: basic_pose_test  converter_path_spline  converter_waypoints_path  dispatcher  load_spline  load_waypoints  spline_dispatcher  waypoint_dispatcher
contrail/splines/: basic.yaml  circle.yaml
contrail/src/: guidance_node.cpp
contrail/waypoints/: circle_end_home.yaml  home_circle_start.yaml
contrail_manager/: CMakeLists.txt  README.md  package.xml  setup.py
contrail_manager/action/: Trajectory.action
contrail_manager/cfg/: ManagerParams.cfg
contrail_manager/launch/: converter_waypoints_path.launch  dispatcher.launch  guidance.launch  (+1 more)
contrail_msgs/: CMakeLists.txt  package.xml
contrail_msgs/msg/: CubicSpline.msg  DiscreteProgress.msg  WaypointList.msg  WaypointProgress.msg
contrail_msgs/srv/: SetTracking.srv
contrail_spline_lib/: CMakeLists.txt  package.xml  setup.py
launch/: generate.launch
rqt_contrail_commander/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_contrail_planner/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
src/: path_node.cpp
(+45 files in other folders)
